# singularity_slurm_simulator

./: README.md  post_container_execution_script.sh  pre_container_execution_script.sh  slurm_sim.def  test.def
R_packages/R6/: DESCRIPTION
R_packages/RSlurmSimTools/: DESCRIPTION  INDEX
R_packages/Rcpp/: DESCRIPTION
R_packages/RcppTOML/: DESCRIPTION
R_packages/cli/: DESCRIPTION
R_packages/cpp11/: DESCRIPTION
R_packages/crayon/: DESCRIPTION
R_packages/dplyr/: DESCRIPTION
R_packages/ellipsis/: DESCRIPTION
R_packages/fansi/: DESCRIPTION
R_packages/generics/: DESCRIPTION
R_packages/glue/: DESCRIPTION
R_packages/here/: DESCRIPTION
R_packages/jsonlite/: DESCRIPTION
R_packages/lifecycle/: DESCRIPTION
R_packages/lubridate/: DESCRIPTION
R_packages/magrittr/: DESCRIPTION
R_packages/pillar/: DESCRIPTION
R_packages/pkgconfig/: DESCRIPTION
R_packages/png/: DESCRIPTION
R_packages/purrr/: DESCRIPTION
R_packages/rappdirs/: DESCRIPTION
R_packages/reticulate/: DESCRIPTION  INDEX
R_packages/rlang/: DESCRIPTION
R_packages/rprojroot/: DESCRIPTION
R_packages/stringi/: DESCRIPTION
R_packages/stringr/: DESCRIPTION
R_packages/tibble/: DESCRIPTION
R_packages/tidyselect/: DESCRIPTION
R_packages/utf8/: DESCRIPTION
R_packages/vctrs/: DESCRIPTION
R_packages/withr/: DESCRIPTION
run_folders/etc/: gres.conf  sim.conf  slurm.conf  slurmdbd.conf  (+3 more)
simulator_files/slurm_sim_ws/slurm_simulator/src/plugins/jobcomp/filesacctout/: Makefile.am  Makefile.in  filesacctout_jobcomp_process.c  filesacctout_jobcomp_process.h  jobcomp_filesacctout.c
(+2111 files in other folders)
